[package]
name = "ark-blst"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blstrs = { version = "^0.6.1", features = ["__private_bench"] }
ark-bls12-381 = { version = "0.4.0" }
ark-ec = { version = "0.4.0" }
ark-ff = { version = "0.4.0" }
ark-std = { version = "0.4.0" }
ark-serialize = { version = "0.4.0" }
blst = { version = "=0.3.10", default-features = true }
num-bigint = "^0.4.3"
ff = "0.12"
num-traits = "^0.2.15"
zeroize = "1.5.7"
rand = "^0.8.5"
hex = "0.4"
byteorder = "1.4.3"
group = "0.12.0"
ark-crypto-primitives = { version = "^0.4", features = ["sponge","r1cs"] }
rand_xorshift = "0.3.0"

[dev-dependencies]
ark-algebra-test-templates = { version = "0.4.0" }

[patch.crates-io]
blstrs = { git = "https://github.com/nikkolasg/blstrs", branch = "feat/arkwork" }
ark-ec = { git = "https://github.com/vmx/algebra", branch = "affine-repr-xy-owned" }
ark-ff = { git = "https://github.com/vmx/algebra", branch = "affine-repr-xy-owned" }
ark-serialize = { git = "https://github.com/vmx/algebra", branch = "affine-repr-xy-owned" }
